TEST_PROGRAMS/INVALID/armin_taheri/invalid1.min
#no parens in strings

var x: string;

x = "computing Ackerman(10)";

print x;

